--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta name="naver-site-verification" content="8fcc4f4fb0e7c74dac392a87fe16eaa65b4a1615" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="건강한학교 병원동행서비스 - 전문적인 병원 동행 및 케어 서비스" />
